--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
 
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/bootstrap.js"></script>
   <script type="text/javascript">
