--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
-
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Toshi</title>
-  <meta name="description" content="">
+  <title>Toshi - Open Source Bitcoin Node</title>
+  <meta name="description" content="An open source Bitcoin node built to power large scale web applications.">
+  <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
+  <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/admin.css">
   <link rel="shortcut icon" href="images/favicon.ico">
-
-
-  <meta property="og:title" content="Toshi - Open source Bitcoin Node">
-  <meta property="og:description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
-  <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
-  <meta property="og:type" content="website">
-  <meta itemprop="name" content="Toshi - Open source Bitcoin Node">
-  <meta itemprop="description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
-  <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
-
-
 </head>
 <body class="home">
   <header>
@@ -32,7 +20,8 @@
             <div class="container-fluid">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="stats.html">Documentation</a></li>
+                <li><a href="/docs">Documentation</a></li>
+                <li><a href="https://github.com/coinbase/toshi">GitHub</a></li>
               </ul>
             </div><!-- /.container-fluid -->
           </nav>
@@ -44,10 +33,10 @@
         <div class="col-md-8 col-md-push-2">
           <span class="toshi_logo"></span>
           <h1>TOSHI</h1>
-          <p>The first open source Bitcoin node designed for large scale projects.<br/><i>Maintained by Coinbase.</i></p>
+          <p>An open source Bitcoin node built to power large scale web applications.</p>
           <div class="toshi_links">
-            <button>Documentation</button>
-            <button>VIEW ON GITHUB</button>
+            <a href="/docs" class="btn">Documentation</a>
+            <a href="https://github.com/coinbase/toshi" class="btn">VIEW ON GITHUB</a>
           </div>
         </div>
       </div>
@@ -95,13 +84,11 @@
 
       <article class="quick_api" id="scrollToId">
 
-        <div class="row">  
+        <div class="row">
             <div class="col-md-12">
               <div class="section_title">
-                <h2>TOSHI IS DESIGNED FOR DEVELOPERS
-                  <span>AND WE'RE ACTIVELY SEEKING CONTRIBUTORS</span>
-                </h2>
-              </div>     
+                <h2>DESIGNED FOR DEVELOPERS</h2>
+              </div>
             <div class="quick_api_nav">
               <a class="active" data-section="block">BLOCK</a>
               <a class="" data-section="transaction">TRANSACTION</a>
@@ -117,7 +104,7 @@
                 <p>In this example we retrieve information about the lastest main branch block processed by Toshi. <br/>This same information is of course available for all blocks.</p>
 
                 <div class="documentation_link">
-                  <button>documentation</button>
+                  <a href="/docs" class="btn">documentation</a>
                 </div>
             </div>
 
@@ -125,7 +112,7 @@
               <div class="quick_api_link">
                 <h5>API Endpoint</h5>
 
-                <div class="code"> 
+                <div class="code">
                   <div class="link_wraper">
                     <p>/api/blocks/latest</p>
                   </div>
@@ -134,7 +121,7 @@
 
               <div class="quick_api_code">
                 <h5>Response</h5>
-<div class="code">                
+<div class="code">
 <pre>
 {
   "hash": "000000000000014bb22ba5dbb6f2d4a0ab571ae040f02e5e1bbc9b9e6b88fff8",
@@ -189,7 +176,7 @@
               <p>Retrieve information about a particular transaction on the network.</p>
 
               <div class="documentation_link">
-                <button>documentation</button>
+                <a href="/docs" class="btn">documentation</a>
               </div>
           </div>
 
@@ -197,7 +184,7 @@
               <div class="quick_api_link">
                 <h5>API Endpoint</h5>
 
-                <div class="code"> 
+                <div class="code">
                   <div class="link_wraper">
                     <p>/api/transactions/21c77bcc54405f011c64a77cb1f014ebcdfd05fc39654b43905a0e189be19ebf</p>
                   </div>
@@ -206,8 +193,8 @@
 
               <div class="quick_api_code">
                 <h5>Response</h5>
-          <div class="code">                
-<pre>          
+          <div class="code">
+<pre>
 {
     "hash": "21c77bcc54405f011c64a77cb1f014ebcdfd05fc39654b43905a0e189be19ebf",
     "version": 1,
@@ -269,7 +256,7 @@
                  The below example shows how you would query for address information including transaction history.</p>
 
               <div class="documentation_link">
-                <button>documentation</button>
+                <a href="/docs" class="btn">documentation</a>
               </div>
           </div>
 
@@ -277,7 +264,7 @@
               <div class="quick_api_link">
                 <h5>API Endpoint</h5>
 
-                <div class="code"> 
+                <div class="code">
                   <div class="link_wraper">
                     <p>/api/addresses/1sT8zQeXUXkS1qUULkC764ry9PZRrd72k/transactions</p>
                   </div>
@@ -286,8 +273,8 @@
 
               <div class="quick_api_code">
                 <h5>Response</h5>
-          <div class="code">                
-<pre> 
+          <div class="code">
+<pre>
 {
     "hash": "1sT8zQeXUXkS1qUULkC764ry9PZRrd72k",
     "balance": 0,
@@ -406,7 +393,7 @@
         }
     });
     $(window).resize(function(){
-       $('#header').height($(window).height()); 
+       $('#header').height($(window).height());
     });
     $('#header').height($(window).height());
 
