--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <div id="header" class="container">
       <div class="row logo">
         <div class="col-md-10 col-md-push-1">
-          <span class="toshi_logo"></span>
-          <h1>TOSHI<i>v 0.1.0</i></h1>
+          <div class="logo_placement">
+            <span class="toshi_logo"></span>
+            <h1>TOSHI<i>v 0.1.0</i></h1>
+          </div>
           <p>An open source Bitcoin node built to power large scale web applications.</p>
           <div class="toshi_links">
             <a href="/docs" class="btn">Documentation</a>
