--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Toshi - Open Source Bitcoin Node</title>
   <meta name="description" content="An open source Bitcoin node built to power large scale web applications.">
-  <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
-  <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
+  <meta property="og:image" content="http://coinbase.com/assets/toshi/og-toshi.jpg">
+  <meta itemprop="image" content="http://coinbase.com/assets/toshi/og-toshi.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/admin.css">
   <link rel="shortcut icon" href="images/favicon.ico">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class="home">
@@ -40,7 +40,7 @@
           <p>An open source Bitcoin node built to power large scale web applications.</p>
           <div class="toshi_links">
             <a href="/docs" class="btn">Documentation</a>
-            <a href="http://network.coinbase.com" target="_blank" class="btn">VIEW DEMO</a>
+            <a href="https://network.coinbase.com" target="_blank" class="btn">VIEW DEMO</a>
             <a href="https://github.com/coinbase/toshi" target="_blank" class="btn">VIEW ON GITHUB</a>
           </div>
         </div>
