--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-sm-4 feature_a">
             <div>
               <h3>100% open source</h3>
-              <p>Toshi is a full open source Bitcoin node implementation built for web scale.</p>
+              <p>Toshi is a full open source Bitcoin node implementation, built by Coinbase.</p>
             </div>
           </div>
           <div class="col-sm-4 feature_b">
