--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Toshi - Open Source Bitcoin Node</title>
-  <meta name="description" content="An open source Bitcoin node built to power large scale web applications.">
-  <meta property="og:image" content="http://coinbase.com/assets/toshi/og-toshi.jpg">
-  <meta itemprop="image" content="http://coinbase.com/assets/toshi/og-toshi.jpg">
+  
+  <meta property="og:title" content="Toshi - Open source Bitcoin Node">
+  <meta property="og:description" content="A full bitcoin node for building web applications.">
+  <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
+  <meta property="og:type" content="website">
+  <meta itemprop="name" content="Toshi - Open source Bitcoin Node">
+  <meta itemprop="description" content="A full bitcoin node for building web applications.">
+  <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
+
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/admin.css">
   <link rel="shortcut icon" href="images/favicon.ico">
