--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p>An open source Bitcoin node built to power large scale web applications.</p>
           <div class="toshi_links">
             <a href="/docs" class="btn">Documentation</a>
-            <a href="https://network.coinbase.com" target="_blank" class="btn">VIEW DEMO</a>
+            <a href="https://bitcoin.toshi.io/" target="_blank" class="btn">VIEW DEMO</a>
             <a href="https://github.com/coinbase/toshi" target="_blank" class="btn">VIEW ON GITHUB</a>
           </div>
         </div>
