Landing page is unversioned

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col-md-10 col-md-push-1">
           <div class="logo_placement">
             <span class="toshi_logo"></span>
-            <h1>TOSHI<i>v 0.1.0</i></h1>
+            <h1>TOSHI</h1>
           </div>
           <p>An open source Bitcoin node built to power large scale web applications.</p>
           <div class="toshi_links">
