--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Toshi - Open Source Bitcoin Node</title>
-
   <meta property="og:title" content="Toshi - Open source Bitcoin Node">
   <meta property="og:description" content="A full bitcoin node for building web applications.">
   <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
@@ -12,8 +11,6 @@
   <meta itemprop="name" content="Toshi - Open source Bitcoin Node">
   <meta itemprop="description" content="A full bitcoin node for building web applications.">
   <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
-
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/admin.css">
   <link rel="shortcut icon" href="images/favicon.ico">
@@ -124,7 +121,7 @@
 
                 <div class="code">
                   <div class="link_wraper">
-                    <p>/api/v0/blocks/latest</p>
+                    <p><a href="https://bitcoin.toshi.io/api/v0/blocks/latest" target="_blank">/api/v0/blocks/latest</a></p>
                   </div>
                 </div>
               </div>
@@ -192,7 +189,7 @@
 
                 <div class="code">
                   <div class="link_wraper">
-                    <p>/api/v0/transactions/21c77bcc54405f011c64a77cb1f014ebcdfd05fc39654b43905a0e189be19ebf</p>
+                    <p><a href="https://bitcoin.toshi.io/api/v0/transactions/21c77bcc54405f011c64a77cb1f014ebcdfd05fc39654b43905a0e189be19ebf" target="_blank">/api/v0/transactions/21c77bcc54405f011c64a77cb1f014ebcdfd05fc39654b43905a0e189be19ebft</a></p>
                   </div>
                 </div>
               </div>
@@ -268,7 +265,8 @@
 
                 <div class="code">
                   <div class="link_wraper">
-                    <p>/api/v0/addresses/1sT8zQeXUXkS1qUULkC764ry9PZRrd72k/transactions</p>
+                    <p></p>
+                    <p><a href="https://bitcoin.toshi.io/api/v0/addresses/1sT8zQeXUXkS1qUULkC764ry9PZRrd72k/transactions" target="_blank">/api/v0/addresses/1sT8zQeXUXkS1qUULkC764ry9PZRrd72k/transactions</a></p>
                   </div>
                 </div>
               </div>
@@ -349,7 +347,6 @@
     </div>
   </section> <!-- page_wraper -->
 
-
    <div class="container text-center">
     <footer>
       <div class="row">
@@ -361,8 +358,6 @@
       </div>
     </footer>
   </div> <!-- END footer -->
-
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
